changement de dossier

--- a/Exercice2/2_algo_MPL.ipynb
+++ b/Exercice2/2_algo_MPL.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:22:05.719213Z",
-     "start_time": "2024-02-29T10:22:04.665295Z"
+     "end_time": "2024-02-29T10:28:35.150816Z",
+     "start_time": "2024-02-29T10:28:34.130724Z"
     }
    },
    "outputs": [],
@@ -30,10 +30,10 @@
     }
    ],
    "source": [
-    "with open('data/visages.pkl', 'rb') as fh:\n",
+    "with open('../data/visages.pkl', 'rb') as fh:\n",
     "    visages = pickle.load(fh)\n",
     "\n",
-    "with open('data/noms.pkl', 'rb') as fh:\n",
+    "with open('../data/noms.pkl', 'rb') as fh:\n",
     "    noms = pickle.load(fh)\n",
     "\n",
     "print('Shape of visages matrix --> ', visages.shape)\n"
@@ -41,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:22:18.528276Z",
-     "start_time": "2024-02-29T10:22:18.520484Z"
+     "end_time": "2024-02-29T10:28:35.164046Z",
+     "start_time": "2024-02-29T10:28:35.152909Z"
     }
    },
    "id": "ba33a7210cd4bda6",
@@ -73,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:22:20.199596Z",
-     "start_time": "2024-02-29T10:22:19.165267Z"
+     "end_time": "2024-02-29T10:28:35.860565Z",
+     "start_time": "2024-02-29T10:28:35.167Z"
     }
    },
    "id": "a6b323a09359e465",
@@ -90,7 +90,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 7\u001B[0m\n\u001B[0;32m      3\u001B[0m camera \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mVideoCapture(\u001B[38;5;241m0\u001B[39m) \u001B[38;5;66;03m# 0 pour 'built-in' caméra, 1 pour caméra externe\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m----> 7\u001B[0m     ret, trame \u001B[38;5;241m=\u001B[39m \u001B[43mcamera\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      8\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m ret \u001B[38;5;241m==\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m     10\u001B[0m         gris \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(trame, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2GRAY)\n",
+      "Cell \u001B[1;32mIn[4], line 11\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m ret \u001B[38;5;241m==\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m     10\u001B[0m     gris \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(trame, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2GRAY)\n\u001B[1;32m---> 11\u001B[0m     coordonnees_visage \u001B[38;5;241m=\u001B[39m \u001B[43mcascade_visage\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdetectMultiScale\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgris\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1.3\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     13\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m (x, y, l, h) \u001B[38;5;129;01min\u001B[39;00m coordonnees_visage:\n\u001B[0;32m     15\u001B[0m         visage \u001B[38;5;241m=\u001B[39m trame[y:y \u001B[38;5;241m+\u001B[39m h, x:x \u001B[38;5;241m+\u001B[39m l, :]\n",
       "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
@@ -133,8 +133,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:22:44.173283Z",
-     "start_time": "2024-02-29T10:22:20.746871Z"
+     "end_time": "2024-02-29T10:29:08.422980Z",
+     "start_time": "2024-02-29T10:28:35.861617Z"
     }
    },
    "id": "96f65b16aefcfae8",
@@ -145,7 +145,11 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-29T10:29:08.425590Z",
+     "start_time": "2024-02-29T10:29:08.425057Z"
+    }
    },
    "id": "356efb165877512f"
   }
