--- a/Exercice2/2_algo_GNB.ipynb
+++ b/Exercice2/2_algo_GNB.ipynb
@@ -30,10 +30,10 @@
     }
    ],
    "source": [
-    "with open('data/visages.pkl', 'rb') as fh:\n",
+    "with open('../data/visages.pkl', 'rb') as fh:\n",
     "    visages = pickle.load(fh)\n",
     "\n",
-    "with open('data/noms.pkl', 'rb') as fh:\n",
+    "with open('../data/noms.pkl', 'rb') as fh:\n",
     "    noms = pickle.load(fh)\n",
     "\n",
     "print('Shape of visages matrix --> ', visages.shape)"
