Exercice 3, algo Regression logistique

--- a/Exercice3/3_GNB.ipynb
+++ b/Exercice3/3_GNB.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:19:18.750144Z",
-     "start_time": "2024-02-29T10:19:16.653038Z"
+     "end_time": "2024-02-29T20:35:08.411535Z",
+     "start_time": "2024-02-29T20:35:07.487408Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:19:42.033414Z",
-     "start_time": "2024-02-29T10:19:42.024846Z"
+     "end_time": "2024-02-29T20:35:08.423988Z",
+     "start_time": "2024-02-29T20:35:08.412594Z"
     }
    },
    "id": "68577d35d7f81a6f",
@@ -63,9 +63,7 @@
     }
    ],
    "source": [
-    "# Attention, pour l'algorithme k-NN, les images doivent être applaties (flattened) en dimension 1\n",
     "N = len(noms)\n",
-    "\n",
     "visages = visages.reshape(N, -1)\n",
     "\n",
     "GNB = GaussianNB()\n",
@@ -74,8 +72,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:19:42.612197Z",
-     "start_time": "2024-02-29T10:19:42.588433Z"
+     "end_time": "2024-02-29T20:35:08.446157Z",
+     "start_time": "2024-02-29T20:35:08.425560Z"
     }
    },
    "id": "3e7ccd073a9e42cc",
@@ -85,14 +83,10 @@
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 7\u001B[0m\n\u001B[0;32m      3\u001B[0m camera \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mVideoCapture(\u001B[38;5;241m0\u001B[39m) \u001B[38;5;66;03m# 0 pour 'built-in' caméra, 1 pour caméra externe\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[1;32m----> 7\u001B[0m     ret, trame \u001B[38;5;241m=\u001B[39m \u001B[43mcamera\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      8\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m ret \u001B[38;5;241m==\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m     10\u001B[0m         gris \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(trame, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2GRAY)\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Admis\n"
      ]
     }
    ],
@@ -150,8 +144,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T10:19:56.150908Z",
-     "start_time": "2024-02-29T10:19:46.042496Z"
+     "end_time": "2024-02-29T20:35:14.389834Z",
+     "start_time": "2024-02-29T20:35:08.448245Z"
     }
    },
    "id": "3e9ad6b32fd25b57",
@@ -162,9 +156,14 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-29T20:35:14.394882Z",
+     "start_time": "2024-02-29T20:35:14.391927Z"
+    }
    },
-   "id": "9e79fe6f4a0e0e3c"
+   "id": "9e79fe6f4a0e0e3c",
+   "execution_count": 4
   }
  ],
  "metadata": {
