correction de syntaxe

--- a/Exercice2/2_algo_Perceptron.ipynb
+++ b/Exercice2/2_algo_Perceptron.ipynb
@@ -70,8 +70,8 @@
     "visages = shuffle(visages, random_state=42)\n",
     "noms = shuffle(noms, random_state=42)\n",
     "\n",
-    "MPL = Perceptron()\n",
-    "MPL.fit(visages, noms)"
+    "Perceptron = Perceptron()\n",
+    "Perceptron.fit(visages, noms)"
    ],
    "metadata": {
     "collapsed": false,
@@ -116,7 +116,7 @@
     "            visage = trame[y:y + h, x:x + l, :]\n",
     "            visage_redimensionne = cv2.resize(visage, (50, 50)).flatten().reshape(1,-1)\n",
     "            \n",
-    "            texte = MPL.predict(visage_redimensionne)\n",
+    "            texte = Perceptron.predict(visage_redimensionne)\n",
     "            \n",
     "            cv2.putText(trame, texte[0], (x, y-10), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 0), 2)\n",
     "            cv2.rectangle(trame, (x, y), (x + l, y + l), (0, 0, 255), 2)\n",
