Amélioration des commentaires

--- a/Exercice2/2_algo_regression_logistique.ipynb
+++ b/Exercice2/2_algo_regression_logistique.ipynb
@@ -1,9 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6660bbecec0398e"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import cv2\n",
+    "from sklearn.linear_model import LogisticRegression"
+   ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -11,12 +25,18 @@
      "start_time": "2024-02-29T11:32:11.897205Z"
     }
    },
-   "outputs": [],
+   "id": "initial_id",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "import pickle\n",
-    "import cv2\n",
-    "from sklearn.linear_model import LogisticRegression"
-   ]
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dee37de9ddcdbf53"
   },
   {
    "cell_type": "code",
@@ -79,6 +99,16 @@
    },
    "id": "f153efdc72781c4e",
    "execution_count": 5
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "83489db48c8bc6ff"
   },
   {
    "cell_type": "code",
