--- a/Exercice3/3_algo_KNN_Admis_NonAdmis.ipynb
+++ b/Exercice3/3_algo_KNN_Admis_NonAdmis.ipynb
@@ -5,7 +5,7 @@
    "id": "84f51b2b",
    "metadata": {},
    "source": [
-    "# Reconnaissance faciale via $k$ plus proches voisins ($k$-NN)"
+    "# Reconnaissance faciale avec authentification admis / non amdis via $k$ plus proches voisins ($k$-NN)"
    ]
   },
   {
