--- a/Exercice3/3_arbre_decision.ipynb
+++ b/Exercice3/3_arbre_decision.ipynb
@@ -1,9 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "556397358419d26f"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import cv2\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import time"
+   ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -11,13 +26,18 @@
      "start_time": "2024-02-29T20:30:46.138962Z"
     }
    },
-   "outputs": [],
+   "id": "initial_id",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "import pickle\n",
-    "import cv2\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "import time"
-   ]
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9d4b9aa9630ce9ee"
   },
   {
    "cell_type": "code",
@@ -79,6 +99,16 @@
    },
    "id": "a6b323a09359e465",
    "execution_count": 4
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "425687a9c24f2f7c"
   },
   {
    "cell_type": "code",
