--- a/Exercice3/3_regression_logistique.ipynb
+++ b/Exercice3/3_regression_logistique.ipynb
@@ -1,9 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e7ee9b8d536f26a7"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import cv2\n",
+    "import time\n",
+    "from sklearn.linear_model import LogisticRegression"
+   ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -11,13 +26,18 @@
      "start_time": "2024-02-29T20:36:59.091474Z"
     }
    },
-   "outputs": [],
+   "id": "initial_id",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "import pickle\n",
-    "import cv2\n",
-    "import time\n",
-    "from sklearn.linear_model import LogisticRegression"
-   ]
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1e4f136b82d43283"
   },
   {
    "cell_type": "code",
@@ -78,6 +98,16 @@
    },
    "id": "f153efdc72781c4e",
    "execution_count": 4
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "faf16622088be720"
   },
   {
    "cell_type": "code",
