--- a/Exercice2/2_algo_GNB.ipynb
+++ b/Exercice2/2_algo_GNB.ipynb
@@ -1,9 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "efef379842d2a755"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import cv2\n",
+    "from sklearn.naive_bayes import GaussianNB"
+   ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -11,12 +25,18 @@
      "start_time": "2024-02-29T10:19:16.653038Z"
     }
    },
-   "outputs": [],
+   "id": "initial_id",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "import pickle\n",
-    "import cv2\n",
-    "from sklearn.naive_bayes import GaussianNB"
-   ]
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2830f76189b1ebe4"
   },
   {
    "cell_type": "code",
@@ -62,7 +82,6 @@
     }
    ],
    "source": [
-    "# Attention, pour l'algorithme k-NN, les images doivent être applaties (flattened) en dimension 1\n",
     "N = len(noms)\n",
     "\n",
     "visages = visages.reshape(N, -1)\n",
@@ -79,6 +98,16 @@
    },
    "id": "3e7ccd073a9e42cc",
    "execution_count": 3
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7a32daf05f0f5b02"
   },
   {
    "cell_type": "code",
