--- a/Exercice2/2_algo_Perceptron.ipynb
+++ b/Exercice2/2_algo_Perceptron.ipynb
@@ -1,9 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6f326f65aace0e89"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import cv2\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "from sklearn.utils import shuffle"
+   ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -11,13 +26,18 @@
      "start_time": "2024-02-29T22:26:05.276521Z"
     }
    },
-   "outputs": [],
+   "id": "initial_id",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "import pickle\n",
-    "import cv2\n",
-    "from sklearn.linear_model import Perceptron\n",
-    "from sklearn.utils import shuffle"
-   ]
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6ad47a4f3cb8f255"
   },
   {
    "cell_type": "code",
@@ -63,7 +83,6 @@
     }
    ],
    "source": [
-    "# Attention, pour l'algorithme k-NN, les images doivent être applaties (flattened) en dimension 1\n",
     "N = len(noms)\n",
     "\n",
     "visages = visages.reshape(N, -1)\n",
@@ -82,6 +101,16 @@
    },
    "id": "a6b323a09359e465",
    "execution_count": 4
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "566b6f16af79ebdd"
   },
   {
    "cell_type": "code",
