--- a/Exercice3/3_GNB.ipynb
+++ b/Exercice3/3_GNB.ipynb
@@ -1,9 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "54a07aeffc6b730c"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import cv2\n",
+    "import time\n",
+    "from sklearn.naive_bayes import GaussianNB"
+   ],
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -11,13 +26,18 @@
      "start_time": "2024-02-29T20:35:07.487408Z"
     }
    },
-   "outputs": [],
+   "id": "initial_id",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "import pickle\n",
-    "import cv2\n",
-    "import time\n",
-    "from sklearn.naive_bayes import GaussianNB"
-   ]
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "85ad3afeea23cc4e"
   },
   {
    "cell_type": "code",
@@ -78,6 +98,16 @@
    },
    "id": "3e7ccd073a9e42cc",
    "execution_count": 3
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9560df9ed9b6ddc1"
   },
   {
    "cell_type": "code",
