--- a/Exercice3/3_KMeans_autre_methode.ipynb
+++ b/Exercice3/3_KMeans_autre_methode.ipynb
@@ -1,23 +1,43 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-02-29T21:52:52.347203Z",
-     "start_time": "2024-02-29T21:52:51.208245Z"
-    }
+    "collapsed": false
    },
+   "id": "b6b395b353badfad"
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [
     "import pickle\n",
     "import cv2\n",
     "import numpy as np\n",
     "from sklearn.cluster import KMeans"
-   ]
+   ],
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T08:58:21.559411Z",
+     "start_time": "2024-03-01T08:58:19.211379Z"
+    }
+   },
+   "id": "initial_id",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2ea2c3cbd6abbc5c"
   },
   {
    "cell_type": "code",
@@ -29,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T21:52:52.352716Z",
-     "start_time": "2024-02-29T21:52:52.348805Z"
+     "end_time": "2024-03-01T08:58:21.565749Z",
+     "start_time": "2024-03-01T08:58:21.560943Z"
     }
    },
    "id": "5b0f6e3dc01d3801",
@@ -43,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of visages matrix -->  (20, 50, 50, 3)\n",
-      "(10, 50, 50, 3)\n"
+      "Shape of visages matrix -->  (60, 70, 70, 3)\n",
+      "(30, 70, 70, 3)\n"
      ]
     }
    ],
@@ -71,8 +91,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T21:52:52.369354Z",
-     "start_time": "2024-02-29T21:52:52.354785Z"
+     "end_time": "2024-03-01T08:58:21.584628Z",
+     "start_time": "2024-03-01T08:58:21.568349Z"
     }
    },
    "id": "636a9486793832c8",
@@ -100,25 +120,520 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T21:52:52.592960Z",
-     "start_time": "2024-02-29T21:52:52.371966Z"
+     "end_time": "2024-03-01T08:58:21.778970Z",
+     "start_time": "2024-03-01T08:58:21.587208Z"
     }
    },
    "id": "ffad47b4a95b6bad",
    "execution_count": 4
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1cf034cdd976351a"
+  },
+  {
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'KMeans' object has no attribute 'sleep'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n",
+      "Admis\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[5], line 28\u001B[0m\n\u001B[0;32m     26\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m texte[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m1\u001B[39m \u001B[38;5;129;01mand\u001B[39;00m tmp \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m40\u001B[39m:\n\u001B[0;32m     27\u001B[0m     cv2\u001B[38;5;241m.\u001B[39mputText(trame, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAdmis\u001B[39m\u001B[38;5;124m\"\u001B[39m, (x, y\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m10\u001B[39m), cv2\u001B[38;5;241m.\u001B[39mFONT_HERSHEY_SIMPLEX, \u001B[38;5;241m1\u001B[39m, (\u001B[38;5;241m255\u001B[39m, \u001B[38;5;241m255\u001B[39m, \u001B[38;5;241m0\u001B[39m), \u001B[38;5;241m2\u001B[39m)\n\u001B[1;32m---> 28\u001B[0m     \u001B[43mkmeans\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m(\u001B[38;5;241m2.0\u001B[39m)\n\u001B[0;32m     29\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAdmis\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     30\u001B[0m     bal \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'KMeans' object has no attribute 'sleep'"
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[6], line 13\u001B[0m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m ret \u001B[38;5;241m==\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[0;32m     12\u001B[0m     gris \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(trame, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2GRAY)\n\u001B[1;32m---> 13\u001B[0m     coordonnees_visage \u001B[38;5;241m=\u001B[39m \u001B[43mcascade_visage\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdetectMultiScale\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgris\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1.3\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m     15\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m (x, y, l, h) \u001B[38;5;129;01min\u001B[39;00m coordonnees_visage:\n\u001B[0;32m     17\u001B[0m         visage \u001B[38;5;241m=\u001B[39m trame[y:y \u001B[38;5;241m+\u001B[39m h, x:x \u001B[38;5;241m+\u001B[39m l, :]\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -176,12 +691,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T21:53:13.038390Z",
-     "start_time": "2024-02-29T21:52:52.594526Z"
+     "end_time": "2024-03-01T08:59:07.251609Z",
+     "start_time": "2024-03-01T08:58:45.868991Z"
     }
    },
    "id": "ac8394f986fe419c",
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -190,7 +705,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-02-29T21:53:13.039438Z"
+     "end_time": "2024-03-01T08:58:24.692798Z",
+     "start_time": "2024-03-01T08:58:24.692278Z"
     }
    },
    "id": "37937c03b974d41b"
