--- a/Exercice3/3_Perceptron.ipynb
+++ b/Exercice3/3_Perceptron.ipynb
@@ -1,16 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "## Librairies"
+   ],
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-02-29T22:32:53.262900Z",
-     "start_time": "2024-02-29T22:32:52.245320Z"
-    }
+    "collapsed": false
    },
+   "id": "3e72ab4c688b158b"
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -18,7 +19,26 @@
     "from sklearn.linear_model import Perceptron\n",
     "from sklearn.utils import shuffle\n",
     "import time"
-   ]
+   ],
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-01T15:35:52.570627Z",
+     "start_time": "2024-03-01T15:35:50.818194Z"
+    }
+   },
+   "id": "initial_id",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Algorithme"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "24fceaaf1b3b9c40"
   },
   {
    "cell_type": "code",
@@ -43,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T22:32:53.275916Z",
-     "start_time": "2024-02-29T22:32:53.263899Z"
+     "end_time": "2024-03-01T15:35:52.584298Z",
+     "start_time": "2024-03-01T15:35:52.572215Z"
     }
    },
    "id": "ba33a7210cd4bda6",
@@ -76,12 +96,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T22:32:53.310627Z",
-     "start_time": "2024-02-29T22:32:53.277486Z"
+     "end_time": "2024-03-01T15:35:52.622838Z",
+     "start_time": "2024-03-01T15:35:52.586317Z"
     }
    },
    "id": "a6b323a09359e465",
    "execution_count": 3
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exécution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4754800eb3efad0b"
   },
   {
    "cell_type": "code",
@@ -148,12 +178,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-29T22:33:30.271983Z",
-     "start_time": "2024-02-29T22:33:23.767098Z"
+     "end_time": "2024-03-01T15:35:58.867410Z",
+     "start_time": "2024-03-01T15:35:52.624380Z"
     }
    },
    "id": "96f65b16aefcfae8",
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -162,10 +192,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-02-29T22:32:56.199673Z"
+     "end_time": "2024-03-01T15:35:58.871597Z",
+     "start_time": "2024-03-01T15:35:58.867937Z"
     }
    },
-   "id": "356efb165877512f"
+   "id": "356efb165877512f",
+   "execution_count": 4
   }
  ],
  "metadata": {
