--- a/Exercice4/4_MLP_admis_non_admis.ipynb
+++ b/Exercice4/4_MLP_admis_non_admis.ipynb
@@ -78,6 +78,7 @@
     "visages = shuffle(visages, random_state = 42)\n",
     "noms = shuffle(noms, random_state = 42)\n",
     "\n",
+    "# définition du modèle\n",
     "MLP = MLPClassifier(hidden_layer_sizes=(100, 80, 60, 40, 20), solver='lbfgs')\n",
     "\n",
     "# entrainement du modèle\n",
