--- a/Exercice4/4_MLP_dectection_visages.ipynb
+++ b/Exercice4/4_MLP_dectection_visages.ipynb
@@ -79,7 +79,7 @@
     "# ici on définit notre modèle avec les paramètres souhaités\n",
     "MLP = MLPClassifier(hidden_layer_sizes=(100, 80, 60, 40, 20), solver='lbfgs')\n",
     "\n",
-    "# entraienment du modèle\n",
+    "# entrainement du modèle\n",
     "MLP.fit(visages, noms)"
    ],
    "metadata": {
