visualisation des centroides exercice 3 kmeans

--- a/Exercice3/3_KMeans_autre_methode.ipynb
+++ b/Exercice3/3_KMeans_autre_methode.ipynb
@@ -17,6 +17,7 @@
     "import pickle\n",
     "import cv2\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans"
    ],
    "metadata": {
@@ -83,7 +84,7 @@
    "source": [
     "visages_admis = visages_admis.reshape(N, -1)\n",
     "\n",
-    "kmeans = KMeans(n_clusters=2)\n",
+    "kmeans = KMeans(n_clusters = 2)\n",
     "kmeans.fit(visages_admis)"
    ],
    "metadata": {
@@ -162,13 +163,38 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Visualisation des centroides"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b90d9f3574b25337"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "centers = kmeans.cluster_centers_\n",
+    "plt.scatter(centers[:, 0], centers[:, 1], marker='x', c='red', label='centroides')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "37937c03b974d41b",
+   "execution_count": null
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "37937c03b974d41b",
+   "id": "afc9f069162ec5b2",
    "execution_count": null
   }
  ],
