--- a/Exercice3/3_KMeans_autre_methode.ipynb
+++ b/Exercice3/3_KMeans_autre_methode.ipynb
@@ -176,8 +176,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "centers = kmeans.cluster_centers_\n",
-    "plt.scatter(centers[:, 0], centers[:, 1], marker='x', c='red', label='centroides')\n",
+    "centroides = kmeans.cluster_centers_\n",
+    "plt.scatter(centroides[:, 0], centroides[:, 1], marker='x', c='red', label='centroides')\n",
     "plt.legend()\n",
     "plt.show()"
    ],
